added func for getting next lesson by lesson Id
