# app/main.go
@@ -36,6 +36,7 @@ func main() {
 
 	siteMux.HandleFunc("/api/getCourses", handler.GetCourses)
 	siteMux.HandleFunc("/api/getCourseLesson", handler.GetCourseLesson)
+	siteMux.HandleFunc("/api/getNextLesson", handler.GetNextLesson)
 
 	siteMux.HandleFunc("/api/docs/", httpSwagger.WrapHandler)
 
